--- a/client/sveltekit-client/package.json
+++ b/client/sveltekit-client/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"build-css": "tailwindcss build src/app.css -o src/app.css"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
